CS59_Intellij/tests/valid/otherbehav.dsl
/* set element in list */
list: "ab", "cd", "ef".
Write list (2).
Set list To "gh" At 2.
Write list (2).

Write "".

/* if statement */
Begin Check,
If 1 + 1 Is 2:
    Write "yes!".
End Check.

Write "".

/* while loop */
i = 1.
Begin Loop,
While i <= 3:
    Write list (i).
    Increment i.
End Loop.

Write "".

/* shuffle list randomly */
Shuffle list.
Write list (1).
Write list (2).
Write list (3).