CS59_Intellij/tests/invalid/semantics/infiniteloop.dsl
/* infinite while loop */
Begin Loop, While 1:
    i = 1.
End Loop.